--- a/styling.css
+++ b/styling.css
@@ -1,13 +1,3 @@
-/* *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-/* body{
-    height: 100%;
-    background: #aef2f5;
-} */
-
 #root {
     border: 1px solid black; 
     width: 600px; 
@@ -65,7 +55,7 @@ h1 {
 }
 
 /***********************/
-/*** General Styling ***/
+/*** Allmän Styling ***/
 /***********************/
 
 .add-aktivitet {
@@ -112,8 +102,8 @@ h1 {
 .class-list-item {
     width: 100%;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
+    flex-direction: row;
     margin: 2px;
 }
 
@@ -133,10 +123,6 @@ h1 {
 .main-lightblue {
     background-color: rgba(195, 213, 243, 0.246);
 }
-
-/* input{
-    width: 350px;
-} */
 
 #lägg-till{
     width: 80px;
@@ -177,34 +163,18 @@ h1 {
 }
 
 .items{
-    border-radius: 5px;
-    align-items: center;
+    display: flex;
     justify-content: space-between;
+    align-items: center;
+    border-radius: 5px;
     cursor: pointer;
     background-color: #c5e1e6c5;
     height: 20px;
     margin-bottom: 8px;
     padding: 5px 10px;
-    display: flex;
+
 }
 
 .hide{
     display: none;
 }
-
-
-/* table {
-  font-family: 'Times New Roman', Times, serif, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-th {
-    font-weight: bold;
-} */
